src/app/page/main-page/main-page.component.scss
@import '../../../assets/sass/partials/theme-default';
@import '../../../assets/sass/partials/utils';
@import './man-page-breakpoints.component.scss';
.mainImage {
  box-shadow: 5px 10px 10px darken(rgba-secondary-2(0.7), 10%);
  object-fit: cover;
}
.articles {
  overflow: hidden;
  .comingsoon {
    @include coming-soon('../../../assets/img/Coming soon.png');
  }

  .article-list {
    height: 100%;
    width: 100%;
    margin-top: 10px;
    .article {
      margin: 10px 10px;
      padding: 10px 0;
      border-bottom: 1px solid $color-secondary-2;
    }
  }
}

.imageOverlay {
  background-color: darken(rgba-secondary-2(0.7), 80%);
  color: $color-primary;
  text-align: center;
  font-style: oblique;
}
.main-content {
  column-gap: 20px;
  row-gap: 20px;
}

// layout
@include small-screen {
  .main-content {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, min-content);
    align-content: space-evenly;
    align-items: center;
    .mainImage {
      grid-column: 1/-1;
      height: auto;
      width: 95vw;
      grid-row: 1/2;
      align-self: baseline;
    }
    .imageOverlay {
      grid-column: 1/-1;
      grid-row: 2/3;
    }
    .articles {
      grid-column: 1/-1;
      grid-row: 3/4;
      .article-heading {
        font-size: 20px;
      }
    }
  }
}

@include larger-screen {
  .notice {
    @include centre-text;
    white-space: pre-line;
  }
  .main-content {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: repeat(5, 1fr);
    align-content: space-evenly;
    justify-content: space-evenly;
    align-items: baseline;
    width: 100%;
    max-height: 65vh;
    height: 100%;
    .mainImage {
      grid-column: 1/6;
      height: 100%;
      width: 100%;
      grid-row: 1/5;
      padding: 5px;
    }
    .imageOverlay {
      grid-column: 1/5;
      grid-row: 4/5;
      align-self: end;
      justify-self: end;
      width: 100%;
      height: 100%;
      position: relative;
      left: 5px; //Adjusting for main image's padding
      top: 5px;
      .overlayText {
        @include centre-text;
      }
    }
    .articles {
      grid-column: 6/-1;
      grid-row: 1/-1;
      justify-self: center;
      height: 100%;
      .article-heading {
        font-size: 25px;
      }
    }
  }
}

